--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -34,5 +34,10 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>CFBundleLocalizations</key>
+    <array>
+    	<string>en</string>
+    	<string>es</string>
+    </array>
 </dict>
 </plist>
