--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,5 +50,6 @@ flutter:
   uses-material-design: true
   assets:
     - assets/icon/icon.png
-    - assets/tutorial/
+    - assets/tutorial/dark/
+    - assets/tutorial/light/
     - lib/core/localization/
