--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   package_info:
   url_launcher:
   flutter_tts:
+  unofficial_jisho_api:
+  page_transition:
 
 flutter_icons:
   android: "launcher_icon"
