--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   unofficial_jisho_api:
   page_transition:
   cached_network_image:
+  tflite_flutter:
 
 flutter_icons:
   android: "launcher_icon"
