--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cached_network_image:
 # bash android_tflite.sh to get the jniLibs
   tflite_flutter:
+  tflite_flutter_helper:
 
 flutter_icons:
   android: "launcher_icon"
@@ -56,3 +57,4 @@ flutter:
   assets:
     - assets/icon/icon.png
     - lib/core/localization/
+    - assets/model/
