--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   tflite_flutter:
   tflite_flutter_helper:
   device_info_plus:
+  get_it:
 
 flutter_icons:
   android: "launcher_icon"
