--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,36 +12,39 @@ dependencies:
   flutter_bloc: ^8.0.1
   equatable: ^2.0.3
   cupertino_icons: ^1.0.2
-  sqflite: ^2.0.2
-  firebase_core: ^1.13.1
-  firebase_auth: ^3.3.11
-  cloud_firestore: ^3.1.10
-  easy_localization: ^3.0.0
-  provider: ^6.0.2
-  shared_preferences: ^2.0.13
-  path: ^1.8.0
-  json_annotation: ^4.3.0
-  syncfusion_flutter_gauges: ^19.4.56
+  sqflite: ^2.0.3
+  firebase_core: ^1.20.0
+  firebase_auth: ^3.6.1
+  cloud_firestore: ^3.4.2
+  easy_localization: ^3.0.1
+  provider: ^6.0.3
+  shared_preferences: ^2.0.15
+  path: ^1.8.1
+  json_annotation: ^4.6.0
+  syncfusion_flutter_gauges: ^20.2.40
   charts_flutter:
     git:
       url: https://github.com/google/charts
-      path: charts_flutter
-  percent_indicator: ^4.0.0
+      path: charts_flutter    
+  percent_indicator: ^4.2.2
   kana_kit: ^2.0.0
   timeago: ^3.2.2
   flutter_launcher_icons: ^0.9.2
   package_info_plus: ^1.4.0
-  url_launcher: ^6.0.20
-  flutter_tts: ^3.3.3
-  unofficial_jisho_api: ^2.0.4
-  page_transition: ^2.0.5
-  cached_network_image: ^3.2.0
+  url_launcher: ^6.1.5
+  flutter_tts: ^3.5.0
+  unofficial_jisho_api: ^3.0.0
+  page_transition: ^2.0.9
+  cached_network_image: ^3.2.1
 # bash android_tflite.sh to get the jniLibs
   tflite_flutter: ^0.9.0
-  tflite_flutter_helper: ^0.3.1
+  tflite_flutter_helper: 
+    git: 
+      url: https://github.com/gabrielglbh/tflite_flutter_helper
+      ref: 1eee07e
   device_info_plus: ^3.2.2
-  tutorial_coach_mark: ^1.2.1
-  flutter_rating_bar: ^4.0.0
+  tutorial_coach_mark: ^1.2.3
+  flutter_rating_bar: ^4.0.1
 
 flutter_icons:
   android: "launcher_icon"
@@ -51,9 +54,9 @@ flutter_icons:
 
 dev_dependencies:
   # flutter pub run build_runner build --delete-conflicting-outputs
-  build_runner: ^2.1.8
-  json_serializable: ^6.1.5
-  flutter_lints: ^1.0.0
+  build_runner: ^2.2.0
+  json_serializable: ^6.3.1
+  flutter_lints: ^2.0.1
 
 flutter:
   uses-material-design: true
