--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   device_info_plus: ^3.2.2
   tutorial_coach_mark: ^1.2.3
   flutter_rating_bar: ^4.0.1
+  collection: ^1.16.0
+  bloc: ^8.0.3
+  image: ^3.2.0
 
 flutter_icons:
   android: "launcher_icon"
