--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,9 +13,11 @@ dependencies:
   equatable: ^2.0.3
   cupertino_icons: ^1.0.2
   sqflite: ^2.0.3
-  firebase_core: ^1.20.0
-  firebase_auth: ^3.6.1
-  cloud_firestore: ^3.4.2
+  firebase_core: ^1.20.1
+  firebase_auth: ^3.6.3
+  firebase_messaging: ^12.0.2
+  flutter_local_notifications: ^9.7.0
+  cloud_firestore: ^3.4.4
   easy_localization: ^3.0.1
   provider: ^6.0.3
   shared_preferences: ^2.0.15
