--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -62,6 +62,8 @@ android {
 
     buildTypes {
         release {
+            minifyEnabled true
+            proguardFiles 'proguard-rules.pro'
             signingConfig signingConfigs.release
         }
     }
