--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: kanpractice
 description: A Flutter project to learn and study the different kanjis.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-version: 2.2.0+20
+version: 2.3.0+21
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -13,9 +13,11 @@ dependencies:
   equatable: ^2.0.3
   cupertino_icons: ^1.0.2
   sqflite: ^2.0.3
-  firebase_core: ^1.20.0
-  firebase_auth: ^3.6.1
-  cloud_firestore: ^3.4.2
+  firebase_core: ^1.20.1
+  firebase_auth: ^3.6.3
+  firebase_messaging: ^12.0.2
+  flutter_local_notifications: ^9.7.0
+  cloud_firestore: ^3.4.4
   easy_localization: ^3.0.1
   provider: ^6.0.3
   shared_preferences: ^2.0.15
@@ -48,6 +50,8 @@ dependencies:
   collection: ^1.16.0
   bloc: ^8.0.3
   image: ^3.2.0
+  intl: ^0.17.0
+  app_settings: ^4.1.8
 
 flutter_icons:
   android: "launcher_icon"
