--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,7 @@ version: 2.5.1+25
 environment:
   sdk: ">=2.17.0 <3.0.0"
 
+# flutter pub upgrade --major-versions
 dependencies:
   flutter:
     sdk: flutter
@@ -13,11 +14,11 @@ dependencies:
   equatable: ^2.0.3
   cupertino_icons: ^1.0.2
   sqflite: ^2.0.3
-  firebase_core: ^1.20.1
-  firebase_auth: ^3.6.3
-  firebase_messaging: ^12.0.2
-  flutter_local_notifications: ^9.7.0
-  cloud_firestore: ^3.4.4
+  firebase_core: ^2.0.0
+  firebase_auth: ^4.0.1
+  firebase_messaging: ^14.0.1
+  flutter_local_notifications: ^12.0.2
+  cloud_firestore: ^4.0.1
   easy_localization: ^3.0.1
   provider: ^6.0.3
   shared_preferences: ^2.0.15
@@ -28,7 +29,7 @@ dependencies:
   percent_indicator: ^4.2.2
   kana_kit: ^2.0.0
   timeago: ^3.2.2
-  flutter_launcher_icons: ^0.9.2
+  flutter_launcher_icons: ^0.10.0
   package_info_plus: ^1.4.0
   url_launcher: ^6.1.5
   flutter_tts: ^3.5.0
@@ -41,7 +42,7 @@ dependencies:
     git:
       url: https://github.com/gabrielglbh/tflite_flutter_helper
       ref: 1eee07e
-  device_info_plus: ^3.2.2
+  device_info_plus: ^4.0.0
   tutorial_coach_mark: ^1.2.3
   flutter_rating_bar: ^4.0.1
   collection: ^1.16.0
