--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   image: ^3.2.0
   intl: ^0.17.0
   app_settings: ^4.1.8
+  injectable: ^1.5.3
+  get_it: ^7.2.0
 
 flutter_icons:
   android: "launcher_icon"
@@ -62,6 +64,7 @@ dev_dependencies:
   build_runner: ^2.2.0
   json_serializable: ^6.3.1
   flutter_lints: ^2.0.1
+  injectable_generator: ^1.5.3
 
 flutter:
   uses-material-design: true
