--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   percent_indicator: ^4.2.2
   kana_kit: ^2.0.0
   timeago: ^3.2.2
-  flutter_launcher_icons: ^0.10.0
+  flutter_launcher_icons: ^0.11.0
   package_info_plus: ^1.4.0
   url_launcher: ^6.1.5
   flutter_tts: ^3.5.0
@@ -50,8 +50,10 @@ dependencies:
   image: ^3.2.0
   intl: ^0.17.0
   app_settings: ^4.1.8
-  injectable: ^1.5.3
+  injectable: ^2.1.0
   get_it: ^7.2.0
+  flutter_markdown: ^0.6.13
+  markdown: ^6.0.1
 
 flutter_icons:
   android: "launcher_icon"
@@ -64,7 +66,7 @@ dev_dependencies:
   build_runner: ^2.2.0
   json_serializable: ^6.3.1
   flutter_lints: ^2.0.1
-  injectable_generator: ^1.5.3
+  injectable_generator: ^2.1.3
 
 flutter:
   uses-material-design: true
