--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,8 @@ dependencies:
   shared_preferences: ^2.0.15
   path: ^1.8.1
   json_annotation: ^4.6.0
-  syncfusion_flutter_gauges: ^20.3.49
-  syncfusion_flutter_charts: ^20.3.49
+  syncfusion_flutter_gauges: ^21.1.37
+  syncfusion_flutter_charts: ^21.1.37
   percent_indicator: ^4.2.2
   kana_kit: ^2.0.0
   timeago: ^3.2.2
@@ -53,7 +53,8 @@ dependencies:
   injectable: ^2.1.0
   get_it: ^7.2.0
   flutter_markdown: ^0.6.13
-  markdown: ^6.0.1
+  markdown: ^7.0.1
+  mockito: ^5.3.2
 
 flutter_icons:
   android: "launcher_icon"
@@ -67,6 +68,9 @@ dev_dependencies:
   json_serializable: ^6.3.1
   flutter_lints: ^2.0.1
   injectable_generator: ^2.1.3
+  remove_from_coverage: ^2.0.0
+  flutter_test:
+    sdk: flutter
 
 flutter:
   uses-material-design: true
