--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,50 +10,52 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.0.1
-  equatable: ^2.0.3
+  flutter_bloc: ^8.1.2
+  equatable: ^2.0.5
   cupertino_icons: ^1.0.2
-  sqflite: ^2.0.3
-  firebase_core: ^2.0.0
-  firebase_auth: ^4.0.1
-  firebase_messaging: ^14.0.1
-  flutter_local_notifications: ^12.0.2
-  cloud_firestore: ^4.0.1
+  sqflite: ^2.2.6
+  firebase_core: ^2.9.0
+  firebase_auth: ^4.4.0
+  firebase_messaging: ^14.4.0
+  flutter_local_notifications: ^12.0.4
+  cloud_firestore: ^4.5.0
   easy_localization: ^3.0.1
-  provider: ^6.0.3
-  shared_preferences: ^2.0.15
-  path: ^1.8.1
-  json_annotation: ^4.6.0
-  syncfusion_flutter_gauges: ^21.1.37
-  syncfusion_flutter_charts: ^21.1.37
-  percent_indicator: ^4.2.2
+  provider: ^6.0.5
+  shared_preferences: ^2.1.0
+  path: ^1.8.2
+  json_annotation: ^4.8.0
+  syncfusion_flutter_gauges: ^21.1.38
+  syncfusion_flutter_charts: ^21.1.38
+  percent_indicator: ^4.2.3
   kana_kit: ^2.0.0
-  timeago: ^3.2.2
+  timeago: ^3.3.0
   flutter_launcher_icons: ^0.11.0
   package_info_plus: ^1.4.0
-  url_launcher: ^6.1.5
-  flutter_tts: ^3.5.0
+  url_launcher: ^6.1.10
+  flutter_tts: ^3.6.3
   unofficial_jisho_api: ^3.0.0
   page_transition: ^2.0.9
-  cached_network_image: ^3.2.1
+  cached_network_image: ^3.2.3
   # bash android_tflite.sh to get the jniLibs
   tflite_flutter: ^0.9.0
   tflite_flutter_helper:
     git:
       url: https://github.com/gabrielglbh/tflite_flutter_helper
-      ref: 1eee07e
+      ref: 5b557f2
   device_info_plus: ^4.0.0
-  tutorial_coach_mark: ^1.2.3
+  tutorial_coach_mark: ^1.2.8
   flutter_rating_bar: ^4.0.1
-  collection: ^1.16.0
-  bloc: ^8.0.3
-  image: ^3.2.0
+  collection: ^1.17.0
+  bloc: ^8.1.1
+  image: ^3.3.0
   intl: ^0.17.0
-  app_settings: ^4.1.8
-  injectable: ^2.1.0
+  app_settings: ^4.2.0
+  injectable: ^2.1.1
   get_it: ^7.2.0
   flutter_markdown: ^0.6.13
   markdown: ^7.0.1
+  freezed: ^2.3.2
+  freezed_annotation: ^2.2.0
 
 flutter_icons:
   android: "launcher_icon"
@@ -63,10 +65,10 @@ flutter_icons:
 
 dev_dependencies:
   # flutter pub run build_runner build --delete-conflicting-outputs
-  build_runner: ^2.2.0
-  json_serializable: ^6.3.1
+  build_runner: ^2.3.3
+  json_serializable: ^6.6.1
   flutter_lints: ^2.0.1
-  injectable_generator: ^2.1.3
+  injectable_generator: ^2.1.5
 
 flutter:
   uses-material-design: true
