--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   freezed: ^2.3.2
   freezed_annotation: ^2.2.0
   http: ^0.13.6
+  google_mlkit_translation: ^0.6.0
 
 flutter_icons:
   android: "launcher_icon"
