--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,9 @@ dependencies:
   freezed_annotation: ^2.2.0
   http: ^0.13.6
   google_mlkit_translation: ^0.6.0
+  google_mlkit_text_recognition: ^0.6.0
+  image_picker: ^0.8.1+1
+  permission_handler: ^10.2.0
 
 flutter_icons:
   android: "launcher_icon"
