--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
     </queries>
 
     <application
-        android:label="KanPractice"
+        android:label="KanPractice Pro"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
