--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   google_mlkit_text_recognition: ^0.6.0
   image_picker: ^0.8.1+1
   permission_handler: ^10.2.0
+  flag: ^6.0.0
+  fl_country_code_picker: ^0.1.2
 
 flutter_icons:
   android: "launcher_icon"
