--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -34,6 +34,12 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+	<string>This app needs access to your camera only to apply OCR on images with text</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app needs access to your Album only to apply OCR on images with text</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app does not record any audio</string>
 	<key>CFBundleLocalizations</key>
     <array>
     	<string>en</string>
