--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: kanpractice
 description: A Flutter project to learn and study the different kanjis.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
-version: 4.3.2+39
+version: 4.3.3+40
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -56,6 +56,7 @@ dependencies:
   markdown: ^7.0.1
   freezed: ^2.3.2
   freezed_annotation: ^2.2.0
+  dash_flags: ^0.1.1
 
 flutter_icons:
   android: "launcher_icon"
