Fragmented ocr_page onto widgets and added camera preview

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   image_picker: ^0.8.1+1
   permission_handler: ^10.2.0
   dash_flags: ^0.1.1
+  camera: ^0.10.5
+  image_cropper: ^3.0.3
+  path_provider: ^2.0.15
 
 flutter_icons:
   android: "launcher_icon"
