--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   camera: ^0.10.5
   image_cropper: ^3.0.3
   path_provider: ^2.0.15
+  carousel_slider: ^4.2.1
 
 flutter_icons:
   android: "launcher_icon"
@@ -89,3 +90,6 @@ flutter:
     - assets/model/
     - assets/initialData/
     - assets/environment/
+    - assets/images/
+    - assets/images/es/
+    - assets/images/en/
