--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   image_cropper: ^3.0.3
   path_provider: ^2.0.15
   carousel_slider: ^4.2.1
+  speech_to_text: ^6.1.1
 
 flutter_icons:
   android: "launcher_icon"
