--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   path_provider: ^2.0.15
   carousel_slider: ^4.2.1
   speech_to_text: ^6.1.1
+  font_awesome_flutter: ^10.4.0
 
 flutter_icons:
   android: "launcher_icon"
