--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,12 @@ dependencies:
   package_info_plus: ^8.1.3
   url_launcher: ^6.3.1
   flutter_tts: ^4.2.1
-  unofficial_jisho_api: ^3.0.0
+  unofficial_jisho_api:
+    git:
+      url: https://github.com/gabrielglbh/unofficial_jisho_api_dart
+      ref: 948896d935062f30f0dee7e00673f5fcabff8ee0
   page_transition: ^2.2.1
   cached_network_image: ^3.3.1
-  # bash android_tflite.sh to get the jniLibs
-  tflite_flutter: ^0.11.0
   device_info_plus: ^11.2.1
   tutorial_coach_mark: ^1.2.12
   flutter_rating_bar: ^4.0.1
@@ -53,15 +54,14 @@ dependencies:
   flutter_markdown: ^0.7.5
   markdown: ^7.3.0
   freezed: ^2.5.8
-  freezed_annotation: ^2.4.4
-  http: ^0.13.6
+  http: ^1.2.2
   google_mlkit_translation: ^0.12.0
   google_mlkit_text_recognition: ^0.14.0
   image_picker: ^1.1.2
   permission_handler: ^11.3.1
   dash_flags: ^0.1.1
   camera: ^0.11.0+2
-  image_cropper: ^4.0.1
+  image_cropper: ^8.1.0
   path_provider: ^2.1.5
   speech_to_text: ^7.0.0
   font_awesome_flutter: ^10.8.0
