--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,11 @@
-{"flutter":{"platforms":{"dart":{"lib/firebase_options.dart":{"projectId":"kanpractice","configurations":{"web":"1:672798672577:web:2c7dd3524f8eb82be6f640"}}}}}}
+{
+  "hosting": {
+    "site": "mykanpractice",
+    "public": "build/web",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]
+  }
+}
